--- a/app/src/main/res/layout/profile_activity_new.xml
+++ b/app/src/main/res/layout/profile_activity_new.xml
@@ -11,6 +11,9 @@
         <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -25,27 +28,34 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:layout_width="@dimen/more_img_size"
-                    android:layout_height="@dimen/more_img_size"
+                    android:layout_width="@dimen/new_more_img_size"
+                    android:layout_height="@dimen/new_more_img_size"
                     android:gravity="center"
                     android:layout_marginTop="@dimen/NontonSize10"
                     android:background="@drawable/circular_drawable">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/ivProfilePic"
+                        android:layout_width="@dimen/new_more_img_size"
+                        android:layout_height="@dimen/new_more_img_size"
+                        android:src="@drawable/default_profile_pic"
+                        civ_border_color="@color/material_grey_400"
+                        civ_border_width="@dimen/NontonSize1" />
 
-                    <TextView
-                        android:id="@+id/user_name_words"
-                        android:layout_width="wrap_content"
-                        android:textSize="@dimen/more_img_txt_size"
-                        android:text=""
-                        android:fontFamily="@font/sukhumvittadmai_normal"
-                        android:textColor="@color/white"
-                        android:layout_height="wrap_content" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/user_name_words"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:textSize="@dimen/new_more_img_txt_size"-->
+<!--                        android:text=""-->
+<!--                        android:fontFamily="@font/sukhumvittadmai_normal"-->
+<!--                        android:textColor="@color/white"-->
+<!--                        android:layout_height="wrap_content" />-->
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
-                    android:layout_marginTop="@dimen/NontonSize50"
+                    android:layout_marginTop="@dimen/NontonSize40"
                     android:layout_height="wrap_content">
 
                     <LinearLayout
@@ -61,7 +71,6 @@
                             android:layout_marginRight="@dimen/NontonSize2"
                             android:contentDescription="TODO"
                             android:padding="@dimen/NontonSize4"
-                            android:visibility="gone"
                             android:scaleType="centerInside"
                             android:src="?attr/profile_icon_background" />
 
@@ -78,13 +87,13 @@
                             android:maxLength="40"
                             android:singleLine="true"
                             android:textColor="?attr/app_edit_text_color"
-                            android:textColorHint="?attr/new_password_text_and_hint_color"
+                            android:textColorHint="?attr/app_edit_text_color"
                             android:textSize="@dimen/TextSize14" />
                     </LinearLayout>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_1sdp"
-                        android:background="?attr/change_password_bottom_line_color" />
+                        android:background="?attr/list_square_item_genre_color" />
 
                     <TextView
                         android:id="@+id/errorName"
@@ -111,7 +120,6 @@
                             android:layout_marginRight="@dimen/NontonSize2"
                             android:contentDescription="TODO"
                             android:padding="@dimen/NontonSize4"
-                            android:visibility="gone"
                             android:src="?attr/email_icon_background" />
 
 
@@ -126,19 +134,207 @@
                             android:imeOptions="actionDone"
                             android:singleLine="true"
                             android:textColor="?attr/app_edit_text_color"
-                            android:textColorHint="?attr/new_password_text_and_hint_color"
+                            android:textColorHint="?attr/app_edit_text_color"
                             android:textSize="@dimen/TextSize14" />
                     </LinearLayout>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_1sdp"
-                        android:background="?attr/change_password_bottom_line_color" />
+                        android:background="?attr/list_square_item_genre_color" />
+                    <TextView
+                        android:id="@+id/errorEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_margin="@dimen/NontonSize5"
+                        android:textColor="@color/inspection_color"
+                        android:textSize="@dimen/TextSize12"
+                        android:visibility="invisible" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingBottom="@dimen/NontonSize5"
+                        android:layout_marginTop="@dimen/NontonSize10">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginRight="@dimen/NontonSize2"
+                            android:contentDescription="TODO"
+                            android:padding="@dimen/NontonSize4"
+                            android:scaleType="centerInside"
+                            android:src="?attr/profile_icon_background" />
+
+
+                        <EditText
+                            android:id="@+id/etMobileNumber"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:fontFamily="@font/sukhumvittadmai_normal"
+                            android:hint="@string/mobile_number"
+                            android:imeOptions="actionDone"
+                            android:maxLength="10"
+                            android:singleLine="true"
+                            android:textColor="?attr/app_edit_text_color"
+                            android:textColorHint="?attr/app_edit_text_color"
+                            android:textSize="@dimen/TextSize14" />
+                    </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_1sdp"
+                        android:background="?attr/list_square_item_genre_color" />
+
+                    <TextView
+                        android:id="@+id/errorMobile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_margin="@dimen/NontonSize5"
+                        android:textColor="@color/inspection_color"
+                        android:textSize="@dimen/TextSize12"
+                        android:visibility="invisible" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingBottom="@dimen/NontonSize5"
+                        android:layout_marginTop="@dimen/NontonSize10">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginRight="@dimen/NontonSize2"
+                            android:contentDescription="TODO"
+                            android:padding="@dimen/NontonSize4"
+                            android:scaleType="centerInside"
+                            android:src="?attr/profile_icon_background" />
+
+
+                        <Spinner
+                            android:id="@+id/spinner_id"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/white"/>
+                    </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_1sdp"
+                        android:background="?attr/list_square_item_genre_color" />
+
+                    <TextView
+                        android:id="@+id/errorGender"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_margin="@dimen/NontonSize5"
+                        android:textColor="@color/inspection_color"
+                        android:textSize="@dimen/TextSize12"
+                        android:visibility="invisible" />
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingBottom="@dimen/NontonSize5"
+                        android:layout_marginTop="@dimen/NontonSize10">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginRight="@dimen/NontonSize2"
+                            android:contentDescription="TODO"
+                            android:padding="@dimen/NontonSize4"
+                            android:scaleType="centerInside"
+                            android:src="@drawable/calender_icon" />
+
+
+                        <EditText
+                            android:id="@+id/etDob"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:fontFamily="@font/sukhumvittadmai_normal"
+                            android:hint="@string/dob"
+                            android:imeOptions="actionDone"
+                            android:editable="false"
+                            android:singleLine="true"
+                            android:textColor="?attr/app_edit_text_color"
+                            android:textColorHint="?attr/app_edit_text_color"
+                            android:textSize="@dimen/TextSize14" />
+                    </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_1sdp"
+                        android:background="?attr/list_square_item_genre_color" />
+
+                    <TextView
+                        android:id="@+id/errorDob"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_margin="@dimen/NontonSize5"
+                        android:textColor="@color/inspection_color"
+                        android:textSize="@dimen/TextSize12"
+                        android:visibility="invisible" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingBottom="@dimen/NontonSize5"
+                        android:layout_marginTop="@dimen/NontonSize10">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginRight="@dimen/NontonSize2"
+                            android:contentDescription="TODO"
+                            android:padding="@dimen/NontonSize4"
+                            android:scaleType="centerInside"
+                            android:src="?attr/profile_icon_background" />
+
+
+                        <EditText
+                            android:id="@+id/etAddress"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:fontFamily="@font/sukhumvittadmai_normal"
+                            android:hint="@string/address"
+                            android:imeOptions="actionDone"
+                            android:textColor="?attr/app_edit_text_color"
+                            android:textColorHint="?attr/app_edit_text_color"
+                            android:textSize="@dimen/TextSize14" />
+                    </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_1sdp"
+                        android:background="?attr/list_square_item_genre_color" />
+
+                    <TextView
+                        android:id="@+id/errorAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_margin="@dimen/NontonSize5"
+                        android:textColor="@color/inspection_color"
+                        android:textSize="@dimen/TextSize12"
+                        android:visibility="invisible" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_marginTop="@dimen/NontonSize50"
+                    android:layout_marginTop="@dimen/NontonSize20"
                     android:layout_height="wrap_content">
                     <LinearLayout
                         android:id="@+id/llLogin"
@@ -151,11 +347,10 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:drawablePadding="@dimen/NontonSize10"
                             android:fontFamily="@font/sukhumvittadmai_bold"
                             android:text="@string/save"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/TextSize12"
+                            android:textSize="@dimen/TextSize16"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -177,7 +372,7 @@
                 android:visibility="gone"/>
 
         </RelativeLayout>
-
+        </ScrollView>
     </LinearLayout>
 
 
