--- a/app/src/main/res/layout-sw600dp-land/signup_activity.xml
+++ b/app/src/main/res/layout-sw600dp-land/signup_activity.xml
@@ -323,6 +323,20 @@ android:textColorHint="?attr/app_edit_text_color"
                                 android:textColor="@color/inspection_color"
                                 android:textSize="@dimen/TextSize12"
                                 android:visibility="invisible" />
+                            <CheckBox
+                                android:id="@+id/termsText"
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:buttonTint="@color/white"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="@dimen/NontonSize10"
+                                android:layout_marginRight="@dimen/NontonSize10"
+                                android:textColor="?attr/app_edit_text_color"
+                                android:fontFamily="@font/sukhumvittadmai_medium"
+                                android:text="I would like to recieve updates from VIPA in future."
+                                android:textSize="@dimen/font_small"
+                                />
                             <LinearLayout
                                 android:id="@+id/llSignUp"
                                 android:layout_width="match_parent"
@@ -352,6 +366,52 @@ android:textColorHint="?attr/app_edit_text_color"
                                     android:textColor="@color/white"
                                     android:textSize="@dimen/suaRegisterText" />
                             </LinearLayout>
+
+                            <LinearLayout
+                                android:id="@+id/rlFacebookLogin"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/NontonSize45"
+                                android:layout_gravity="center|center_vertical"
+                                android:layout_marginTop="@dimen/NontonSize20"
+                                android:background="@drawable/rounded_button1"
+                                android:gravity="center">
+
+                                <androidx.appcompat.widget.AppCompatImageView
+                                    android:layout_width="@dimen/NontonSize20"
+                                    android:layout_height="@dimen/NontonSize20"
+                                    android:layout_marginRight="@dimen/NontonSize5"
+                                    android:contentDescription="TODO"
+                                    android:src="@drawable/facebook_icon"
+                                    android:tint="#FFFFFF"
+                                    />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerInParent="true"
+                                    android:background="@drawable/rounded_button1"
+                                    android:fontFamily="@font/sukhumvittadmai_bold"
+                                    android:text="@string/sign_in_with_facebook"
+                                    android:textColor="@color/white"
+                                    android:textSize="@dimen/TextSize12"
+                                    android:textStyle="bold" />
+
+                                <com.facebook.login.widget.LoginButton
+                                    android:id="@+id/fbButton"
+                                    android:layout_width="1dp"
+                                    android:layout_height="1dp"
+                                    android:layout_centerInParent="true"
+                                    android:layout_gravity="center|center_horizontal"
+                                    android:autofillHints="@null"
+                                    android:gravity="center"
+                                    android:inputType="textNoSuggestions"
+                                    android:padding="@dimen/_10sdp"
+                                    android:textColor="@color/white"
+                                    android:textSize="@dimen/_12sdp"
+                                    android:visibility="invisible" />
+
+                            </LinearLayout>
+
 
 
                         </LinearLayout>
