--- a/app/src/main/res/layout/fragment_step_one.xml
+++ b/app/src/main/res/layout/fragment_step_one.xml
@@ -55,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/NontonSize45"
             android:fontFamily="@font/sukhumvittadmai_medium"
-            android:text="@string/start_access"
+            android:text="เริ่มเข้าใช้งาน"
             android:textColor="@color/white"
             android:gravity="center"
             android:textSize="@dimen/NontonSize20"
@@ -69,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/NontonSize45"
             android:fontFamily="@font/sukhumvittadmai_medium"
-            android:text="@string/register"
+            android:text="ลงทะเบียนสมัครสมาชิก"
             android:textColor="@color/white"
             android:gravity="center"
             android:textSize="@dimen/NontonSize20"
