--- a/app/src/main/res/layout/fragment_step_three.xml
+++ b/app/src/main/res/layout/fragment_step_three.xml
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/NontonSize45"
             android:fontFamily="@font/sukhumvittadmai_medium"
-            android:text="@string/start_access"
+            android:text="เริ่มเข้าใช้งาน"
             android:textColor="@color/white"
             android:gravity="center"
             android:textSize="@dimen/NontonSize20"
@@ -70,7 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/NontonSize45"
             android:fontFamily="@font/sukhumvittadmai_medium"
-            android:text="@string/register"
+            android:text="ลงทะเบียนสมัครสมาชิก"
             android:textColor="@color/white"
             android:gravity="center"
             android:textSize="@dimen/NontonSize20"
