--- a/app/src/main/res/layout/profile_activity_new.xml
+++ b/app/src/main/res/layout/profile_activity_new.xml
@@ -28,11 +28,12 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
+                    android:id="@+id/profile_layout"
                     android:layout_width="@dimen/new_more_img_size"
                     android:layout_height="@dimen/new_more_img_size"
                     android:gravity="center"
                     android:layout_marginTop="@dimen/NontonSize10"
-                    android:background="@drawable/circular_drawable">
+                    >
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/ivProfilePic"
                         android:layout_width="@dimen/new_more_img_size"
