--- a/app/src/main/res/layout/avatar_item.xml
+++ b/app/src/main/res/layout/avatar_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -11,6 +11,16 @@
         android:contentDescription="TODO"
         android:scaleType="fitXY"
          />
+     <ImageView
+         android:id="@+id/image_selection"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:contentDescription="TODO"
+         android:scaleType="fitXY"
+         android:layout_gravity="right"
+         >
 
-</RelativeLayout>
+     </ImageView>
+
+</FrameLayout>
 </layout>
