--- a/app/src/main/res/layout/activity_sign_up_third_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_third_page.xml
@@ -46,11 +46,12 @@
                     >
 
                     <LinearLayout
+                        android:id="@+id/profile_layout"
                         android:layout_width="@dimen/new_more_img_size"
                         android:layout_height="@dimen/new_more_img_size"
                         android:gravity="center"
                         android:layout_marginTop="@dimen/NontonSize10"
-                        android:background="@drawable/circular_drawable">
+                        >
                         <de.hdodenhof.circleimageview.CircleImageView
                             android:id="@+id/ivProfilePic"
                             android:layout_width="@dimen/new_more_img_size"
@@ -95,7 +96,8 @@
                                 android:fontFamily="@font/sukhumvittadmai_normal"
                                 android:hint="@string/mobile_number"
                                 android:imeOptions="actionDone"
-                                android:maxLength="10"
+                                android:inputType="number"
+                                android:maxLength="11"
                                 android:singleLine="true"
                                 android:textColor="?attr/app_edit_text_color"
                                 android:textColorHint="?attr/app_edit_text_color"
@@ -156,7 +158,6 @@
 
 
                         <LinearLayout
-                            android:id="@+id/dob_layout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -183,11 +184,9 @@
                                 android:fontFamily="@font/sukhumvittadmai_normal"
                                 android:hint="@string/dob"
                                 android:imeOptions="actionDone"
-                                android:editable="false"
-                                android:clickable="true"
-                                android:focusable="true"
-                                android:enabled="true"
                                 android:singleLine="true"
+                                android:focusable="false"
+                                android:clickable="true"
                                 android:textColor="?attr/app_edit_text_color"
                                 android:textColorHint="?attr/app_edit_text_color"
                                 android:textSize="@dimen/TextSize14" />
