--- a/app/src/main/res/layout-sw600dp-land/forgot_password.xml
+++ b/app/src/main/res/layout-sw600dp-land/forgot_password.xml
@@ -47,7 +47,8 @@
 
                     android:layout_marginTop="30dp"
                     android:contentDescription="TODO"
-                    android:src="@drawable/vipalogo512" />
+                    android:src="@drawable/vipalogo512"
+                    android:visibility="gone"/>
 
 
                 <LinearLayout
