--- a/app/src/main/res/layout-sw600dp-land/more_item.xml
+++ b/app/src/main/res/layout-sw600dp-land/more_item.xml
@@ -55,11 +55,13 @@
         </LinearLayout>
 
         <View
+            android:visibility="gone"
+            android:id="@+id/view_line"
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
+            android:layout_height="1.5dp"
             android:layout_marginLeft="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_5sdp"
-            android:background="?attr/more_item_bottom_line_color" />
+            android:background="#444444" />
 
     </LinearLayout>
 </layout>
