--- a/app/src/main/res/values-v28/styles.xml
+++ b/app/src/main/res/values-v28/styles.xml
@@ -66,7 +66,7 @@
 
     </style>
     <style name="SwitchTheme" parent="Theme.AppCompat.Light">
-        <item name="android:colorControlActivated">#224ba3</item>
+        <item name="android:colorControlActivated">#f68b1f</item>
     </style>
 
 </resources>
