--- a/app/src/main/res/layout-port/activity_series_detail.xml
+++ b/app/src/main/res/layout-port/activity_series_detail.xml
@@ -393,12 +393,14 @@
                                 <ImageView
                                     android:id="@+id/transparent_layout"
                                     android:layout_width="match_parent"
-                                    android:layout_height="match_parent" />
+                                    android:layout_height="match_parent"
+                                    />
 
                                 <ImageView
                                     android:layout_width="match_parent"
                                     android:layout_height="0.8dp"
-                                    android:background="?attr/tab_selected" />
+                                    android:background="?attr/tab_selected"
+                                    android:visibility="gone"/>
 
                                 <me.vipa.app.utils.helpers.WrappingViewPager
                                     android:id="@+id/viewPager"
