--- a/app/src/main/res/layout-sw720dp-port/activity_series_detail.xml
+++ b/app/src/main/res/layout-sw720dp-port/activity_series_detail.xml
@@ -398,7 +398,8 @@
                                 <ImageView
                                     android:layout_width="match_parent"
                                     android:layout_height="0.8dp"
-                                    android:background="?attr/tab_selected" />
+                                    android:background="?attr/tab_selected"
+                                    android:visibility="gone"/>
 
                                 <me.vipa.app.utils.helpers.WrappingViewPager
                                     android:id="@+id/viewPager"
