--- a/app/src/main/res/layout/episode_screen.xml
+++ b/app/src/main/res/layout/episode_screen.xml
@@ -410,6 +410,7 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0.8dp"
+                        android:visibility="gone"
                         android:layout_alignBottom="@+id/tabLayout"
                         android:background="?attr/tab_selected" />
                     </RelativeLayout>
